Update HTML for hamburger navbar troubleshooting
Adjust w3.css classes on "Site Navigation" hamburger navbar for all pages.
Navbar should now hide on w3-large and w3-medium.

--- a/home.html
+++ b/home.html
@@ -32,6 +32,10 @@
   <a href="javascript:void(0)" onclick="w3_close()" class="w3-right w3-xlarge w3-padding-large w3-hover-black w3-hide-large" title="Close Menu">
     <i class="fa fa-remove"></i>
   </a>
+  <h4 class="w3-hide-large w3-bar-item"><b>Site Navigation</b></h4>
+  <a class="w3-hide-large w3-hide-medium w3-bar-item w3-button w3-hover-theme" href="memberships.html">Admission & Memberships</a>
+  <a class="w3-hide-large w3-hide-medium w3-bar-item w3-button w3-hover-theme" href="amenities.html">Amenities</a>
+  <a class="w3-hide-large w3-hide-medium w3-bar-item w3-button w3-hover-theme" href="contact.html">Contact</a>
   <h4 class="w3-bar-item"><b>Page Navigation</b></h4>
   <a class="w3-bar-item w3-button w3-hover-theme-dark w3-theme" id="focus-status" href="#main" onclick="set_focus_current_status()">Current Status</a>
   <a class="w3-bar-item w3-button w3-hover-theme" id="focus-welcome" href="#welcome" onclick="set_focus_welcome()">Welcome</a>
