--- a/amenities.html
+++ b/amenities.html
@@ -31,9 +31,9 @@
     <i class="fa fa-remove"></i>
   </a>
   <h4 class="w3-hide-large w3-bar-item"><b>Site Navigation</b></h4>
-  <a class="w3-hide-large w3-bar-item w3-button w3-hover-theme" href="memberships.html">Admission & Memberships</a>
-  <a class="w3-hide-large w3-bar-item w3-button w3-hover-theme-dark w3-theme" href="amenities.html">Amenities</a>
-  <a class="w3-hide-large w3-bar-item w3-button w3-hover-theme" href="contact.html">Contact</a>
+  <a class="w3-hide-large w3-hide-medium w3-bar-item w3-button w3-hover-theme" href="memberships.html">Admission & Memberships</a>
+  <a class="w3-hide-large w3-hide-medium w3-bar-item w3-button w3-hover-theme-dark w3-theme" href="amenities.html">Amenities</a>
+  <a class="w3-hide-large w3-hide-medium w3-bar-item w3-button w3-hover-theme" href="contact.html">Contact</a>
   <h4 class="w3-bar-item"><b>Page Navigation</b></h4>
   <a class="w3-bar-item w3-button w3-hover-theme-dark w3-theme" id="focus-amenities" href="#amenities" onclick="set_focus_amenities()">Pool Amenities</a>
   <a class="w3-bar-item w3-button w3-hover-theme" id="focus-concessions" href="#concessions" onclick="set_focus_concessions()">Concessions Stand</a>
