--- a/contact.html
+++ b/contact.html
@@ -31,9 +31,9 @@
     <i class="fa fa-remove"></i>
   </a>
   <h4 class="w3-hide-large w3-bar-item"><b>Site Navigation</b></h4>
-  <a class="w3-hide-large w3-bar-item w3-button w3-hover-theme" href="memberships.html">Admission & Memberships</a>
-  <a class="w3-hide-large w3-bar-item w3-button w3-hover-theme" href="amenities.html">Amenities</a>
-  <a class="w3-hide-large w3-bar-item w3-button w3-hover-theme-dark w3-theme" href="contact.html">Contact</a>
+  <a class="w3-hide-large w3-hide-medium w3-bar-item w3-button w3-hover-theme" href="memberships.html">Admission & Memberships</a>
+  <a class="w3-hide-large w3-hide-medium w3-bar-item w3-button w3-hover-theme" href="amenities.html">Amenities</a>
+  <a class="w3-hide-large w3-hide-medium w3-bar-item w3-button w3-hover-theme-dark w3-theme" href="contact.html">Contact</a>
   <h4 class="w3-bar-item"><b>Page Navigation</b></h4>
   <a class="w3-bar-item w3-button w3-hover-theme-dark w3-theme" id="focus-contact-cassel-hills-pool" href="#contact-cassel-hills-pool" onclick="set_focus_contact_cassel_hills_pool()">Reach Out</a>
   <a class="w3-bar-item w3-button w3-hover-theme" id="focus-contact-management" href="#contact-management" onclick="set_focus_contact_management()">Contact Management</a>
