--- a/memberships.html
+++ b/memberships.html
@@ -31,9 +31,9 @@
     <i class="fa fa-remove"></i>
   </a>
   <h4 class="w3-hide-large w3-bar-item"><b>Site Navigation</b></h4>
-  <a class="w3-hide-large w3-bar-item w3-button w3-hover-theme-dark w3-theme" href="memberships.html">Admission & Memberships</a>
-  <a class="w3-hide-large w3-bar-item w3-button w3-hover-theme" href="amenities.html">Amenities</a>
-  <a class="w3-hide-large w3-bar-item w3-button w3-hover-theme" href="contact.html">Contact</a>
+  <a class="w3-hide-large w3-hide-medium w3-bar-item w3-button w3-hover-theme-dark w3-theme" href="memberships.html">Admission & Memberships</a>
+  <a class="w3-hide-large w3-hide-medium w3-bar-item w3-button w3-hover-theme" href="amenities.html">Amenities</a>
+  <a class="w3-hide-large w3-hide-medium w3-bar-item w3-button w3-hover-theme" href="contact.html">Contact</a>
   <h4 class="w3-bar-item"><b>Page Navigation</b></h4>
   <a class="w3-bar-item w3-button w3-hover-theme-dark w3-theme" id="focus-daily-admission" href="#daily-admission" onclick="set_focus_admission()">Daily Admission</a>
   <a class="w3-bar-item w3-button w3-hover-theme" id="focus-membership-perks" href="#membership-perks" onclick="set_focus_membership_perks()">Membership Perks</a>
