--- a/memberships.html
+++ b/memberships.html
@@ -30,7 +30,7 @@
   <a href="javascript:void(0)" onclick="w3_close()" class="w3-right w3-xlarge w3-padding-large w3-hover-black w3-hide-large" title="Close Menu">
     <i class="fa fa-remove"></i>
   </a>
-  <h4 class="w3-hide-large w3-bar-item"><b>Site Navigation</b></h4>
+  <h4 class="w3-hide-large w3-hide-medium w3-bar-item"><b>Site Navigation</b></h4>
   <a class="w3-hide-large w3-hide-medium w3-bar-item w3-button w3-hover-theme-dark w3-theme" href="memberships.html">Admission & Memberships</a>
   <a class="w3-hide-large w3-hide-medium w3-bar-item w3-button w3-hover-theme" href="amenities.html">Amenities</a>
   <a class="w3-hide-large w3-hide-medium w3-bar-item w3-button w3-hover-theme" href="contact.html">Contact</a>
