Add base.html and update HTML pages.
Change redirects to home.html to base.html ("/") .
Update page navigation for base.html.
Add more information to welcome message on base.html.

--- a/404.html
+++ b/404.html
@@ -20,7 +20,7 @@
 <div class="w3-top">
   <div class="w3-bar w3-theme w3-top w3-left-align w3-large">
     <a class="w3-bar-item w3-button w3-right w3-hide-large w3-hover-white w3-large w3-theme-l1" href="javascript:void(0)" onclick="w3_open()"><i class="fa fa-bars"></i></a>
-    <a href="home.html" class="w3-bar-item w3-button w3-hover-white">Home</a>
+    <a href="/" class="w3-bar-item w3-button w3-hover-white">Home</a>
     <a href="memberships.html" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Admission & Memberships</a>
     <a href="amenities.html" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Amenities</a>
     <a href="contact.html" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Contact</a>
@@ -56,12 +56,12 @@
 			<div class="w3-padding-16 w3-container" id="contact-management">
 				<h1 class="w3-text-theme">Other Pages</h1>
 				<div class="w3-row">
-					<a href="home.html"><div class="w3-third w3-padding">
+					<a href="/"><div class="w3-third w3-padding">
 						<header class="w3-container w3-theme-dark w3-hover-theme">
 							<h3>Cassel Hills Pool Home</h3>
 						</header>
 						<div class="w3-container w3-light-gray">
-							<p>Go to the homepage for this site.<br><br><a href="home.html" target="_blank">Open page in new tab <sup><i class="fa fa-external-link"></i></sup></a></p>
+							<p>Go to the homepage for this site.<br><br><a href="/" target="_blank">Open page in new tab <sup><i class="fa fa-external-link"></i></sup></a></p>
 						</div>
 					</div></a>
 					<a href="memberships.html"><div class="w3-third w3-padding">
