--- a/memberships.html
+++ b/memberships.html
@@ -18,7 +18,7 @@
 <div class="w3-top">
   <div class="w3-bar w3-theme w3-top w3-left-align w3-large">
     <a class="w3-bar-item w3-button w3-right w3-hide-large w3-hover-white w3-large w3-theme-l1" href="javascript:void(0)" onclick="w3_open()"><i class="fa fa-bars"></i></a>
-    <a href="home.html" class="w3-bar-item w3-button w3-hover-white">Home</a>
+    <a href="/" class="w3-bar-item w3-button w3-hover-white">Home</a>
     <a href="memberships.html" class="w3-bar-item w3-button w3-hide-small w3-theme-dark w3-hover-white">Admission & Memberships</a>
     <a href="amenities.html" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Amenities</a>
     <a href="contact.html" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Contact</a>
