Update to shorten page links
Update to remove .html from hyperlink redirects within the site.

--- a/memberships.html
+++ b/memberships.html
@@ -19,9 +19,9 @@
   <div class="w3-bar w3-theme w3-top w3-left-align w3-large">
     <a class="w3-bar-item w3-button w3-right w3-hide-large w3-hover-white w3-large w3-theme-l1" href="javascript:void(0)" onclick="w3_open()"><i class="fa fa-bars"></i></a>
     <a href="/" class="w3-bar-item w3-button w3-hover-white">Home</a>
-    <a href="memberships.html" class="w3-bar-item w3-button w3-hide-small w3-theme-dark w3-hover-white">Admission & Memberships</a>
-    <a href="amenities.html" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Amenities</a>
-    <a href="contact.html" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Contact</a>
+    <a href="memberships" class="w3-bar-item w3-button w3-hide-small w3-theme-dark w3-hover-white">Admission & Memberships</a>
+    <a href="amenities" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Amenities</a>
+    <a href="contact" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Contact</a>
   </div>
 </div>
 
@@ -31,9 +31,9 @@
     <i class="fa fa-remove"></i>
   </a>
   <h4 class="w3-hide-large w3-hide-medium w3-bar-item"><b>Site Navigation</b></h4>
-  <a class="w3-hide-large w3-hide-medium w3-bar-item w3-button w3-hover-theme-dark w3-theme" href="memberships.html">Admission & Memberships</a>
-  <a class="w3-hide-large w3-hide-medium w3-bar-item w3-button w3-hover-theme" href="amenities.html">Amenities</a>
-  <a class="w3-hide-large w3-hide-medium w3-bar-item w3-button w3-hover-theme" href="contact.html">Contact</a>
+  <a class="w3-hide-large w3-hide-medium w3-bar-item w3-button w3-hover-theme-dark w3-theme" href="memberships">Admission & Memberships</a>
+  <a class="w3-hide-large w3-hide-medium w3-bar-item w3-button w3-hover-theme" href="amenities">Amenities</a>
+  <a class="w3-hide-large w3-hide-medium w3-bar-item w3-button w3-hover-theme" href="contact">Contact</a>
   <h4 class="w3-bar-item"><b>Page Navigation</b></h4>
   <a class="w3-bar-item w3-button w3-hover-theme-dark w3-theme" id="focus-daily-admission" href="#daily-admission" onclick="set_focus_admission()">Daily Admission</a>
   <a class="w3-bar-item w3-button w3-hover-theme" id="focus-membership-perks" href="#membership-perks" onclick="set_focus_membership_perks()">Membership Perks</a>
@@ -143,9 +143,9 @@
 				<ul>
 					<li>Early access before daily admission to non-residents on Tuesday, Thursday, Friday, and Saturday</li>
 					<li>Access on members and residents only days</li>
-					<lii>Access to <a href="amenities.html#special-events">monthly special events</a> hosted at Cassel Hills Pool</lii>
+					<lii>Access to <a href="amenities#special-events">monthly special events</a> hosted at Cassel Hills Pool</lii>
 					<li>Up to three guests per member, admitted at the $6 Vandalia Resident daily admission rate.</li>
-					<li>Reduced <a href="amenities.html#rentals">rental price</a>, as well as higher number of permitted rental attendees.</li>
+					<li>Reduced <a href="amenities#rentals">rental price</a>, as well as higher number of permitted rental attendees.</li>
 				</ul>
 			</div>
 			<div class="w3-padding-16 w3-container" id="membership-categories">
