--- a/amenities.html
+++ b/amenities.html
@@ -19,9 +19,9 @@
   <div class="w3-bar w3-theme w3-top w3-left-align w3-large">
     <a class="w3-bar-item w3-button w3-right w3-hide-large w3-hover-white w3-large w3-theme-l1" href="javascript:void(0)" onclick="w3_open()"><i class="fa fa-bars"></i></a>
     <a href="/" class="w3-bar-item w3-button w3-hover-white">Home</a>
-    <a href="memberships.html" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Admission & Memberships</a>
-    <a href="amenities.html" class="w3-bar-item w3-button w3-theme-dark w3-hide-small w3-hover-white">Amenities</a>
-    <a href="contact.html" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Contact</a>
+    <a href="memberships" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Admission & Memberships</a>
+    <a href="amenities" class="w3-bar-item w3-button w3-theme-dark w3-hide-small w3-hover-white">Amenities</a>
+    <a href="contact" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Contact</a>
   </div>
 </div>
 
@@ -31,9 +31,9 @@
     <i class="fa fa-remove"></i>
   </a>
   <h4 class="w3-hide-large w3-hide-medium w3-bar-item"><b>Site Navigation</b></h4>
-  <a class="w3-hide-large w3-hide-medium w3-bar-item w3-button w3-hover-theme" href="memberships.html">Admission & Memberships</a>
-  <a class="w3-hide-large w3-hide-medium w3-bar-item w3-button w3-hover-theme-dark w3-theme" href="amenities.html">Amenities</a>
-  <a class="w3-hide-large w3-hide-medium w3-bar-item w3-button w3-hover-theme" href="contact.html">Contact</a>
+  <a class="w3-hide-large w3-hide-medium w3-bar-item w3-button w3-hover-theme" href="memberships">Admission & Memberships</a>
+  <a class="w3-hide-large w3-hide-medium w3-bar-item w3-button w3-hover-theme-dark w3-theme" href="amenities">Amenities</a>
+  <a class="w3-hide-large w3-hide-medium w3-bar-item w3-button w3-hover-theme" href="contact">Contact</a>
   <h4 class="w3-bar-item"><b>Page Navigation</b></h4>
   <a class="w3-bar-item w3-button w3-hover-theme-dark w3-theme" id="focus-amenities" href="#amenities" onclick="set_focus_amenities()">Pool Amenities</a>
   <a class="w3-bar-item w3-button w3-hover-theme" id="focus-concessions" href="#concessions" onclick="set_focus_concessions()">Concessions Stand</a>
@@ -78,7 +78,7 @@
 			</div>
 			<div class="w3-padding-16 w3-container" id="special-events">
 				<h1 class="w3-text-theme">Special Events</h1>
-				<p>The City of Vandalia and Cassel Hills Pool host monthly events throughout our regular season (June through August). These events are free to <a href="memberships.html#membership-categories">Members of Cassel Hills Pool</a>, Vandalia Residents, and families of the Vandalia-Butler School District. </p>
+				<p>The City of Vandalia and Cassel Hills Pool host monthly events throughout our regular season (June through August). These events are free to <a href="memberships#membership-categories">Members of Cassel Hills Pool</a>, Vandalia Residents, and families of the Vandalia-Butler School District. </p>
 				<table class="w3-table-all">
 					<thead>
 						<tr class="w3-theme-dark">
@@ -126,7 +126,7 @@
 						<td>75 Guests</td>
 					</tr>
 					<tr class="w3-hover-theme">
-						<td><a href="memberships.html#membership-categories" class="hover-link-dark">Cassel Hills Pool Member</a></td>
+						<td><a href="memberships#membership-categories" class="hover-link-dark">Cassel Hills Pool Member</a></td>
 						<td>$250.00</td>
 						<td>100 Guests</td>
 					</tr>
