Add "/" to end of links.

--- a/contact.html
+++ b/contact.html
@@ -19,9 +19,9 @@
   <div class="w3-bar w3-theme w3-top w3-left-align w3-large">
     <a class="w3-bar-item w3-button w3-right w3-hide-large w3-hover-white w3-large w3-theme-l1" href="javascript:void(0)" onclick="w3_open()"><i class="fa fa-bars"></i></a>
     <a href="/" class="w3-bar-item w3-button w3-hover-white">Home</a>
-    <a href="memberships" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Admission & Memberships</a>
-    <a href="amenities" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Amenities</a>
-    <a href="contact" class="w3-bar-item w3-button w3-theme-dark w3-hide-small w3-hover-white">Contact</a>
+    <a href="memberships/" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Admission & Memberships</a>
+    <a href="amenities/" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Amenities</a>
+    <a href="contact/" class="w3-bar-item w3-button w3-theme-dark w3-hide-small w3-hover-white">Contact</a>
   </div>
 </div>
 
@@ -31,9 +31,9 @@
     <i class="fa fa-remove"></i>
   </a>
   <h4 class="w3-hide-large w3-hide-medium w3-bar-item"><b>Site Navigation</b></h4>
-  <a class="w3-hide-large w3-hide-medium w3-bar-item w3-button w3-hover-theme" href="memberships">Admission & Memberships</a>
-  <a class="w3-hide-large w3-hide-medium w3-bar-item w3-button w3-hover-theme" href="amenities">Amenities</a>
-  <a class="w3-hide-large w3-hide-medium w3-bar-item w3-button w3-hover-theme-dark w3-theme" href="contact">Contact</a>
+  <a class="w3-hide-large w3-hide-medium w3-bar-item w3-button w3-hover-theme" href="memberships/">Admission & Memberships</a>
+  <a class="w3-hide-large w3-hide-medium w3-bar-item w3-button w3-hover-theme" href="amenities/">Amenities</a>
+  <a class="w3-hide-large w3-hide-medium w3-bar-item w3-button w3-hover-theme-dark w3-theme" href="contact/">Contact</a>
   <h4 class="w3-bar-item"><b>Page Navigation</b></h4>
   <a class="w3-bar-item w3-button w3-hover-theme-dark w3-theme" id="focus-contact-cassel-hills-pool" href="#contact-cassel-hills-pool" onclick="set_focus_contact_cassel_hills_pool()">Reach Out</a>
   <a class="w3-bar-item w3-button w3-hover-theme" id="focus-contact-management" href="#contact-management" onclick="set_focus_contact_management()">Contact Management</a>
@@ -49,7 +49,7 @@
 		<div class="w3-col m12 l9">
 			<div class="w3-padding-32 w3-container" id="contact-cassel-hills-pool">
 				<h1 class="w3-text-theme">Reach Out to Cassel Hills Pool</h1>
-				<p>Do you have questions about Cassel Hills Pool?<br>Call us at (937)-898-2123 or visit us in person at 1061 Taylorsview Dr. Vandalia, OH 45377!<br>Please call the Vandalia Recreation Center at (937)-415-2340 with any questions about <a href="memberships">pool memberships</a>.</p>
+				<p>Do you have questions about Cassel Hills Pool?<br>Call us at (937)-898-2123 or visit us in person at 1061 Taylorsview Dr. Vandalia, OH 45377!<br>Please call the Vandalia Recreation Center at (937)-415-2340 with any questions about <a href="memberships/">pool memberships</a>.</p>
 				<h4>Map & Directions:</h4>
 				<iframe class="w3-hide-medium w3-hide-small" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12245.474842051048!2d-84.18087960972261!3d39.888376461969514!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x883f7c25098a8347%3A0x29b526f5242b3242!2sCassel%20Hills%20Swimming%20Pool!5e0!3m2!1sen!2sus!4v1692996227726!5m2!1sen!2sus" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" SameSite="False"></iframe>
 				<iframe class="w3-hide-large w3-hide-small" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12245.474842051048!2d-84.18087960972261!3d39.888376461969514!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x883f7c25098a8347%3A0x29b526f5242b3242!2sCassel%20Hills%20Swimming%20Pool!5e0!3m2!1sen!2sus!4v1692996227726!5m2!1sen!2sus" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"SameSite="False"></iframe>
