--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
   <div class="w3-bar w3-theme w3-top w3-left-align w3-large">
     <a class="w3-bar-item w3-button w3-right w3-hide-large w3-hover-white w3-large w3-theme-l1" href="javascript:void(0)" onclick="w3_open()"><i class="fa fa-bars"></i></a>
     <a href="/" class="w3-bar-item w3-button w3-theme-dark w3-hover-white">Home</a>
-    <a href="memberships" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Admission & Memberships</a>
-    <a href="amenities" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Amenities</a>
-    <a href="contact" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Contact</a>
+    <a href="memberships/" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Admission & Memberships</a>
+    <a href="amenities/" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Amenities</a>
+    <a href="contact/" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Contact</a>
   </div>
 </div>
 
@@ -33,9 +33,9 @@
     <i class="fa fa-remove"></i>
   </a>
   <h4 class="w3-hide-large w3-hide-medium w3-bar-item"><b>Site Navigation</b></h4>
-  <a class="w3-hide-large w3-hide-medium w3-bar-item w3-button w3-hover-theme" href="memberships">Admission & Memberships</a>
-  <a class="w3-hide-large w3-hide-medium w3-bar-item w3-button w3-hover-theme" href="amenities">Amenities</a>
-  <a class="w3-hide-large w3-hide-medium w3-bar-item w3-button w3-hover-theme" href="contact">Contact</a>
+  <a class="w3-hide-large w3-hide-medium w3-bar-item w3-button w3-hover-theme" href="memberships/">Admission & Memberships</a>
+  <a class="w3-hide-large w3-hide-medium w3-bar-item w3-button w3-hover-theme" href="amenities/">Amenities</a>
+  <a class="w3-hide-large w3-hide-medium w3-bar-item w3-button w3-hover-theme" href="contact/">Contact</a>
   <h4 class="w3-bar-item"><b>Page Navigation</b></h4>
   <a class="w3-bar-item w3-button w3-hover-theme" id="focus-welcome" href="#welcome" onclick="set_focus_welcome()">Welcome</a>
   <a class="w3-bar-item w3-button w3-hover-theme" id="focus-focus-vandalia" href="#focus-vandalia" onclick="set_focus_focus_vandalia()">Focus Vandalia</a>
@@ -52,7 +52,7 @@
 		<div class="w3-padding-64 w3-container" id="welcome">
 			<img src="images/CHP_cropped.png" alt="Cassel Hills Pool" class="w3-image">
 			<h1 class="w3-text-theme">Welcome to Cassel Hills Pool!</h1>
-			<p>Welcome to the 2023 Cassel Hills Pool Season!  <br>Tucked away in a quite Vandalia neighborhood, Cassel Hills Pool offers safe and enjoyable summer fun for all ages. With <a href="amenities">a large variety of amenities</a> in addition to our two pools, Cassel Hills Poll is the perfect place for you to relax, excercise, or have fun with friends and family! As a well-established part of the Vandalia community, Cassel Hills Pool is proud to serve <a href="memberships">pool members, residents of vandalia, and daily admission guests</a>.<br><br>In an effort to improve the pool experience for members and guests, a number of changes have been implemented for the 2023 season.  These changes include a new Admission Policy, a new Pool Manager, and <a href="memberships">an updated Membership Rate structure and Daily Admission fee</a>.  To learn more about these changes and review the Pool Rules, <a href="files/2023 Members and Visitors Guide.pdf" target="_blank">click here</a> to view <a href="files/2023 Members and Visitors Guide.pdf" target="_blank">the 2023 Member and Visitor's Guide</a> for more details.</p>
+			<p>Welcome to the 2023 Cassel Hills Pool Season!  <br>Tucked away in a quite Vandalia neighborhood, Cassel Hills Pool offers safe and enjoyable summer fun for all ages. With <a href="amenities/">a large variety of amenities</a> in addition to our two pools, Cassel Hills Poll is the perfect place for you to relax, excercise, or have fun with friends and family! As a well-established part of the Vandalia community, Cassel Hills Pool is proud to serve <a href="memberships/">pool members, residents of vandalia, and daily admission guests</a>.<br><br>In an effort to improve the pool experience for members and guests, a number of changes have been implemented for the 2023 season.  These changes include a new Admission Policy, a new Pool Manager, and <a href="memberships/">an updated Membership Rate structure and Daily Admission fee</a>.  To learn more about these changes and review the Pool Rules, <a href="files/2023 Members and Visitors Guide.pdf" target="_blank">click here</a> to view <a href="files/2023 Members and Visitors Guide.pdf" target="_blank">the 2023 Member and Visitor's Guide</a> for more details.</p>
 		</div>
 		
 		<div class="w3-padding-32 w3-container" id="focus-vandalia">
@@ -64,8 +64,8 @@
     <div class="w3-col m3 l3 w3-container w3-padding-64" id="current-status-sidebar">
 	  <h4 class="w3-text-theme-dark">Cassel Hills Pool is currently: </h4>
       <a href="memberships#membership-categories"><p class="w3-border w3-padding-large w3-theme w3-hover-theme-dark" id="opento-members">Closed to Cassel Hills Pool Members</p></a>
-      <a href="memberships"><p class="w3-border w3-padding-large w3-theme w3-hover-theme-dark" id="opento-residents">Closed to Vandalia Residents</p></a>
-      <a href="memberships"><p class="w3-border w3-padding-large w3-theme w3-hover-theme-dark" id="opento-public">Closed for General Admission</p></a>
+      <a href="memberships/"><p class="w3-border w3-padding-large w3-theme w3-hover-theme-dark" id="opento-residents">Closed to Vandalia Residents</p></a>
+      <a href="memberships/"><p class="w3-border w3-padding-large w3-theme w3-hover-theme-dark" id="opento-public">Closed for General Admission</p></a>
       <a  id="weatherwidget" class="weatherwidget-io" href="https://forecast7.com/en/39d89n84d20/vandalia/?unit=us" data-label_1="Vandalia, OH" data-label_2="Current Weather" data-font="Roboto" data-icons="Climacons Animated" data-days="3" data-basecolor="#0069A7" data-accent="#0069A7" data-textcolor="White" data-suncolor="Yellow" data-mooncolor="#FFFE91"></a>
 	  <script>
 		!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');
