Fix issue with links nesting (round 2)
Trying again to fix link nesting 404 crash.

--- a/memberships.html
+++ b/memberships.html
@@ -19,9 +19,9 @@
   <div class="w3-bar w3-theme w3-top w3-left-align w3-large">
     <a class="w3-bar-item w3-button w3-right w3-hide-large w3-hover-white w3-large w3-theme-l1" href="javascript:void(0)" onclick="w3_open()"><i class="fa fa-bars"></i></a>
     <a href="/" class="w3-bar-item w3-button w3-hover-white">Home</a>
-    <a href="/memberships/" class="w3-bar-item w3-button w3-hide-small w3-theme-dark w3-hover-white">Admission & Memberships</a>
-    <a href="/amenities/" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Amenities</a>
-    <a href="/contact/" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Contact</a>
+    <a href="/memberships" class="w3-bar-item w3-button w3-hide-small w3-theme-dark w3-hover-white">Admission & Memberships</a>
+    <a href="/amenities" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Amenities</a>
+    <a href="/contact" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Contact</a>
   </div>
 </div>
 
@@ -32,8 +32,8 @@
   </a>
   <h4 class="w3-hide-large w3-hide-medium w3-bar-item"><b>Site Navigation</b></h4>
   <a class="w3-hide-large w3-hide-medium w3-bar-item w3-button w3-hover-theme-dark w3-theme" href="memberships/">Admission & Memberships</a>
-  <a class="w3-hide-large w3-hide-medium w3-bar-item w3-button w3-hover-theme" href="/amenities/">Amenities</a>
-  <a class="w3-hide-large w3-hide-medium w3-bar-item w3-button w3-hover-theme" href="/contact/">Contact</a>
+  <a class="w3-hide-large w3-hide-medium w3-bar-item w3-button w3-hover-theme" href="/amenities">Amenities</a>
+  <a class="w3-hide-large w3-hide-medium w3-bar-item w3-button w3-hover-theme" href="/contact">Contact</a>
   <h4 class="w3-bar-item"><b>Page Navigation</b></h4>
   <a class="w3-bar-item w3-button w3-hover-theme-dark w3-theme" id="focus-daily-admission" href="#daily-admission" onclick="set_focus_admission()">Daily Admission</a>
   <a class="w3-bar-item w3-button w3-hover-theme" id="focus-membership-perks" href="#membership-perks" onclick="set_focus_membership_perks()">Membership Perks</a>
