--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
   <a class="w3-hide-large w3-hide-medium w3-bar-item w3-button w3-hover-theme" href="/amenities">Amenities</a>
   <a class="w3-hide-large w3-hide-medium w3-bar-item w3-button w3-hover-theme" href="/contact">Contact</a>
   <h4 class="w3-bar-item"><b>Page Navigation</b></h4>
-  <a class="w3-bar-item w3-button w3-hover-theme" id="focus-welcome" href="#welcome" onclick="set_focus_welcome()">Welcome</a>
-  <a class="w3-bar-item w3-button w3-theme w3-hover-theme-dark" id="focus-focus-vandalia" href="#focus-vandalia" onclick="set_focus_focus_vandalia()">Focus Vandalia</a>
+  <a class="w3-bar-item w3-button w3-theme w3-hover-theme-dark" id="focus-welcome" href="#welcome" onclick="set_focus_welcome()">Welcome</a>
+  <a class="w3-bar-item w3-button w3-hover-theme" id="focus-focus-vandalia" href="#focus-vandalia" onclick="set_focus_focus_vandalia()">Focus Vandalia</a>
 </nav>
 
 <!-- Overlay effect when opening sidebar on small screens -->
